Revision history for {{$dist->name}}

{{$NEXT}}

0.001002  2012-03-06 14:25:48 CST6CDT
  - fix huge bug where $c->error wasn't set correctly (good catch xinming)

0.001001  2012-01-30 16:43:14 CST6CDT

0.001000  2011-11-18 23:15:10 CST6CDT
  - initial release